--- a/nsacsample/src/components/Home.css
+++ b/nsacsample/src/components/Home.css
@@ -1,12 +1,11 @@
 
  .gallery-section-card{
-    background-color: #565079 !important;
     margin:8px;
     padding: 15px;
   }
  .gallery-section-image{
-    width:auto;
-    height:auto;
+    width:50%;
+    height:50%;
 }
    
   .gallery-section-card-text{
