--- a/nsacsample/src/components/Home.css
+++ b/nsacsample/src/components/Home.css
@@ -14,13 +14,9 @@
     font-weight: 600;
     font-size: 16px;
   } 
-<<<<<<< Updated upstream
   .container-fluid{
     background: url("../components/images/backimg.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    background-attachment: fixed;
   }
-=======
-
- 
->>>>>>> Stashed changes
