--- a/nsacsample/src/components/Home.css
+++ b/nsacsample/src/components/Home.css
@@ -20,3 +20,8 @@
     background-size: 100% 100%;
     background-attachment: fixed;
   }
+  h1{
+    font-weight:700 !important;
+    /* font-family: "Magneto"; */
+    font-size:4em !important;
+  }
