--- a/nsacsample/src/components/Home.css
+++ b/nsacsample/src/components/Home.css
@@ -2,10 +2,12 @@
  .gallery-section-card{
     margin:8px;
     padding: 15px;
+    
   }
  .gallery-section-image{
-    width:50%;
-    height:50%;
+    width:20em;
+    height:20em;
+    padding-top: 1em;
 }
    
   .gallery-section-card-text{
