--- a/nsacsample/src/components/Home.css
+++ b/nsacsample/src/components/Home.css
@@ -1,4 +1,7 @@
 
+ body{
+  text-align: left;
+ }
  .gallery-section-card{
     margin:8px;
     padding: 15px;
@@ -27,3 +30,4 @@
     /* font-family: "Magneto"; */
     font-size:4em !important;
   }
+
